# pfp-e2019-pub

./: README.md  bootstrap-exercises.md  project-suggestions.md
slides/L5-parallel-haskell-code/: README.md  Sudoku.hs  sudoku-par1.hs  sudoku-par2.hs  sudoku-par3-homebrew.hs  sudoku-par3.hs  sudoku.cabal  sudoku1.hs  sudoku2-final.hs  sudoku2.hs  sudoku3-final.hs  sudoku3.hs
weekly-3/code-handout/hs-handout/: BVH.hs  Image.hs  README.md  bench-pfpray.hs  cabal.project  pfpray.cabal
weekly-3/code-handout/stencil-handout/: Makefile  blur-fusion.cpp  it1d-stencil.cpp
weekly-4/ispc/: .gitignore  Makefile  filter.c  filter.ispc  mandelbrot.c  mandelbrot.ispc  pack.c  pack.ispc  relax.c  relax.ispc  rle.c  rle.ispc  scan.c  scan.ispc  sum.c  sum.ispc  timing.h
weekly-4/poly-transf/: permutation.py  reindexing.py  scaling.py
